<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Button 
            android:id="@+id/bt1"
            android:text="@string/hi_label" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            />
        <Button 
            android:id="@+id/bt2"
            android:text="@string/bye_label" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            />
        <Button 
            android:id="@+id/bt3"
            android:text="@string/yo_label" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal" >

        <RadioButton
            android:id="@+id/rad1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            
            android:text="@string/woman_label" />

        <RadioButton
            android:id="@+id/rad2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/man_label" />

    </LinearLayout>

     <CheckBox 
        	android:id="@+id/chk1"
            android:text="@string/android_label" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            />
        <CheckBox 
            android:id="@+id/chk2"
            android:text="@string/iphone_label" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
           />
        <ToggleButton 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:onClick="showToggleButtonInfo"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sonraki"
            android:onClick="sonrakiSayfa" />
    
</LinearLayout>
